--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "yarn build & git add . & git commit -m'update' & git push"
+    "deploy": "zsh ./scripts/fastcommit.zsh"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
